[package]
name = "hybrid"
version = "0.1.4"
edition = "2021"
authors = ["Artur Gwoździowski"]

[dependencies]
bevy = "0.10.0"
bevy_egui = "0.20.1"
bevy_prototype_lyon = "0.8.0"
bevy_rapier2d = "0.21.0"
image = "0.24.5"
rand = "0.8.5"
bevy-inspector-egui = "0.18.1"

[build-dependencies]
embed-resource = "2.0.0"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"